# sfs

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/simdisk/: basic.h  communication.h  disk-block.h  disk-manager.h  initializor.h
include/simdisk/disk-manager/: disk-manager.h
include/simdisk/initializor/: initializor.h
include/simsh/: simsh.h
src/simdisk/: CMakeLists.txt  basic.cpp  disk-block.cpp  disk-manager.cpp  initializor.cpp  main.cpp
src/simdisk/command/: cat.cpp  cd.cpp  chmod.cpp  copy.cpp  del.cpp  dir.cpp  info.cpp  md.cpp  newfile.cpp  rd.cpp  write.cpp
src/simdisk/disk-manager/: disk-manager.cpp
src/simdisk/initializor/: initializor.cpp
src/simsh/: builtin.cpp  main.cpp  simsh.cpp
